--- a/src/homePage/homepage-style.css
+++ b/src/homePage/homepage-style.css
@@ -46,10 +46,12 @@
 }
 
 .right-person-expanded {
-  background-color: rgb(243, 95, 95);
+  background-color: rgb(250, 235, 215);
   height: 100vh;
   width: 100vw;
-  transition: 0.5s;
+  transition: all 0.5s;
+  display: flex;
+  position: relative;
 }
 
 .right-person:hover {
@@ -61,9 +63,14 @@
   transition: all 0.5s;
 }
 
-.photo {
+.photo-left {
   height: 100%;
   mask-image: linear-gradient(to left, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
   /* position: absolute; */
   /* right: 0; */
+}
+
+.photo-right {
+  height: 100%;
+  mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 }
